src/test/contracts/negative/pattern_matching_anomalies/redundant_case/c1_c1_c2_c3.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x) {
    when(One(a)): unit;
    when(One(b)): unit;
    when(Two(c)): unit;
    when(Three()): unit
  }
